deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: booking-system
  labels:
    app.kubernetes.io/part-of: booking-smart-system
